--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,10 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-.card {
-  @apply font-bold py-2 px-4 rounded;
+ul,
+li {
+  font-weight: 400;
 }
-
 svg {
   vertical-align: baseline;
+}
+
+.card {
+  background-color: #f8f1ea;
+  padding: 150px;
 }
