--- a/src/classification/molecules/List/ListItem/style.module.scss
+++ b/src/classification/molecules/List/ListItem/style.module.scss
@@ -1,19 +1,37 @@
 @import "../../../../styles/variables";
 
 .listItem {
-  background: white;
   border-radius: $radius;
-  min-height: 62px;
-  padding: 18px;
-  margin: 15px 0;
-  position: relative;
+  font-family: $ff-secondary;
+  .type {
+    color: $grey;
+  }
   &:before {
     content: "";
     height: 20px;
     width: 4px;
-    background-color: darkmagenta;
     position: absolute;
     border-radius: $radius;
     left: -2px;
+  }
+  &.sport {
+    &:before {
+      background-color: $pink-red;
+    }
+  }
+  &.shopping {
+    &:before {
+      background-color: $lime-green;
+    }
+  }
+  &.music {
+    &:before {
+      background-color: $purple;
+    }
+  }
+  &.other {
+    &:before {
+      background-color: $sky-blue;
+    }
   }
 }
