feat(todo-item): add action buttons on hover

--- a/src/classification/molecules/List/ListItem/style.module.scss
+++ b/src/classification/molecules/List/ListItem/style.module.scss
@@ -3,6 +3,15 @@
 .listItem {
   border-radius: $radius;
   font-family: $ff-secondary;
+  .actions {
+    transition: 0.1s;
+    opacity: 0;
+  }
+  &:hover {
+    .actions {
+      opacity: 1;
+    }
+  }
   .type {
     color: $grey;
   }
