--- a/src/classification/molecules/List/ListItem/style.module.scss
+++ b/src/classification/molecules/List/ListItem/style.module.scss
@@ -4,12 +4,14 @@
   border-radius: $radius;
   font-family: $ff-secondary;
   .actions {
-    transition: 0.1s;
+    transition: 0.2s;
     opacity: 0;
+    transform: scale(0);
   }
   &:hover {
     .actions {
       opacity: 1;
+      transform: scale(1);
     }
   }
   .type {
