--- a/src/style.scss
+++ b/src/style.scss
@@ -23,3 +23,31 @@
 body {
   background-color: #f5f5f5;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 14px 14px transparent;
+  border: solid 4px transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  // background: rgba(182, 180, 180, 0.295);
+  // border-radius: 10px;
+  box-shadow: inset 0 0 10px 10px rgba(182, 180, 180, 0.295);
+  border: solid 7px transparent;
+  border-radius: 14px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  box-shadow: inset 0 0 10px 10px rgba(182, 180, 180, 0.596);
+  border: solid 7px transparent;
+  border-radius: 14px;
+  cursor: pointer;
+}
