feat(responsive): make mobile responsive

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,4 @@ $pink-red: #f10a58;
 $lime-green: #c3f10a;
 $purple: #d20af1;
 $sky-blue: #0ac9f1;
+$sm-and-less: "only screen and (max-width: 991px)";
