--- a/src/classification/templates/TodoHome/style.module.scss
+++ b/src/classification/templates/TodoHome/style.module.scss
@@ -6,9 +6,9 @@
   margin-top: 85px;
   box-shadow: 0px 25px 30px #0000000f;
   border-radius: 18px;
-  @media #{$sm-and-less} {
-    margin: 25px;
-  }
+  // @media #{$sm-and-less} {
+  //   margin: 25px;
+  // }
   .outterCard {
     margin: auto;
     background-color: white;
@@ -21,7 +21,7 @@
     .itemSection {
       padding: 25px 75px;
       @media #{$sm-and-less} {
-        padding: 25px 35px;
+        padding: 25px 20px;
       }
     }
 
